--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@
 
             <!-- Search Bar -->
             <div class="search-bar col-md-6 mx-auto">
-                <h1 class="text-center">Hard Rock Lyric Search</h1>
+                <h1 class="text-center">Hard Rock Music Search</h1>
                 <div class="search-box my-5">
                     <input id="inputField" type="text" class="form-control" placeholder="Enter your artist song name">
                     <button onclick="searchButton()" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
+
+            <!-- Loading Spinner -->
+            <section id="spinner">
+                <center>
+                    <button class="btn btn-success" type="button" disabled>
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Loading...
+                    </button>
+                </center>
+            </section>
 
             <!-- Audio -->
             <center hidden>
