added not found dialog

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                 </center>
             </section>
 
+            <!-- Song not found -->
+            <section id="not-found">
+                <center>
+                    <div id="not-found-div" class="alert alert-danger" role="alert"
+                    onclick="document.getElementById('not-found').style.display = 'none'">
+                        Songs not found!
+                    </div>
+                </center>
+            </section>
+
             <!-- Audio -->
             <center hidden>
                 <audio src="" id="audioId" controls>
